<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >
    <LinearLayout 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:orientation="vertical"
        >
        

    <LinearLayout 
               android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    	android:background="@drawable/xunfanji_fenggejieshao_bg1"
        >
        
<LinearLayout 
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:gravity="center"
    >
    <Button 
        android:id="@+id/ibtn_styleintro_faxingcankao"
           android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="发型参考"
    	android:textColor="@android:color/black"
    	android:background="@drawable/xunfanji_fenggejieshaonew_btn_faxincankao_selected"
        />
    <Button 
        android:id="@+id/ibtn_styleintro_aimeise"
           android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="爱美色"
    	android:textColor="@android:color/black"
    	android:background="@drawable/xunfanji_fenggejieshaonew_btn_aimeise_selected"
        />
    <Button 
        android:id="@+id/ibtn_styleintro_taofaxing"
           android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="淘发型"
    	android:textColor="@android:color/black"
    	android:background="@drawable/xunfanji_fenggejieshaonew_btn_taofaxin_selected"
        />
</LinearLayout>
<TextView 
           android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/str_daibiaomingxing"
    	android:layout_marginLeft="20dp"
    />
<LinearLayout 
            android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dp"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal"
    	
    >
    <LinearLayout 
          android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    style="@style/ll_xunfanji_intro"
        >
        <ImageView 
            android:id="@+id/iv_xunfanji_img1"
                     android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
            />
        <TextView 
              android:id="@+id/txt_xunfanji_name1"
                 android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_daibiaomingxing"
    		android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout 
          android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	 style="@style/ll_xunfanji_intro"
        >
        <ImageView 
             android:id="@+id/iv_xunfanji_img2"
                     android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
            />
        <TextView 
              android:id="@+id/txt_xunfanji_name2"
                 android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_daibiaomingxing"
    		android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout 
          android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        >
        <ImageView 
             android:id="@+id/iv_xunfanji_img3"
                     android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
            />
        <TextView 
             android:id="@+id/txt_xunfanji_name3"
                 android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_daibiaomingxing"
    		android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>
    </LinearLayout>
<!--  -->
<LinearLayout 
    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/xunfanji_fenggejieshao_bg2"
    >
    
<LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="10dp"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="25dp"
    	
    >
    <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_fenggetedian"
        />
    <TextView 
        android:id="@+id/txt_xunfanji_fenggetedian"
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/hello_world"
        />
</LinearLayout>
</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/xunfanji_fenggejieshao_bg3"
    >
<LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="10dp"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="25dp"
    >
    <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_faxingtedian"
        />
    <TextView 
          android:id="@+id/txt_xunfanji_faxingtedian"
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/hello_world"
        />
</LinearLayout>
</LinearLayout>

<LinearLayout 
     android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="@drawable/xunfanji_fenggejieshao_bg2"
    >
     <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_fenggebiaoqian"
    		android:layout_marginLeft="20dp"
    		android:layout_marginTop="15dp"
    		android:layout_gravity="top"
        />
     <LinearLayout 
          android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_marginTop="10dp"
    	android:visibility="visible"
         >
  
     <LinearLayout 
         android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:gravity="left"
    		android:layout_marginBottom="5dp"
         >
         <TextView 
             android:id="@+id/iv_xunfanji_biaoqian_1"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    			android:textColor="@android:color/white"
             />
         <TextView 
              android:id="@+id/iv_xunfanji_biaoqian_2"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    			android:textColor="@android:color/white"
             />
         <TextView 
              android:id="@+id/iv_xunfanji_biaoqian_3"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    			android:textColor="@android:color/white"
             />
     </LinearLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:gravity="left"
         >
         <TextView 
              android:id="@+id/iv_xunfanji_biaoqian_4"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    			android:textColor="@android:color/white"
             />
         <TextView 
              android:id="@+id/iv_xunfanji_biaoqian_5"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    			android:textColor="@android:color/white"
             />
         <TextView 
              android:id="@+id/iv_xunfanji_biaoqian_6"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:background="@drawable/xunfangji_fenggejieshao_biaoqian"
    		android:gravity="center"
    		android:textColor="@android:color/white"
             />
     </LinearLayout>
        </LinearLayout>

</LinearLayout>
       <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="@drawable/xunfanji2_bg3"
    	android:gravity="center_vertical"
  
    >
    <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_ranfajianyi"
    		android:layout_marginLeft="20dp"
    		android:layout_gravity="top"
    		android:layout_marginTop="10dp"
        />
    <TextView 
          android:id="@+id/txt_xunfanji_ranfajianyi"
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/hello_world"
    		  android:layout_marginRight="25dp"
    		  android:layout_gravity="top"
    		android:layout_marginTop="10dp"
        />
</LinearLayout> 
       <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="@drawable/xunfanji2_bg4"
    	
    >
    <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_tuijian"
    		android:layout_marginLeft="20dp"
    		  android:layout_gravity="top"
    		  android:layout_marginTop="10dp"
        />
    
 <LinearLayout 
         android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    		android:gravity="left"
    		  android:layout_gravity="top"
    		  android:layout_marginTop="10dp"
         >
     <LinearLayout 
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_marginRight="20dp"
         >
         <ImageView 
             android:id="@+id/iv_xunfanji_sehao_1"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
             />
         <TextView 
               android:id="@+id/txt_xunfanji_sehao_1"
                  android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/app_name"
             />
            </LinearLayout>
    <LinearLayout 
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:layout_marginRight="20dp"
         >
         <ImageView 
               android:id="@+id/iv_xunfanji_sehao_2"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
             />
         <TextView 
               android:id="@+id/txt_xunfanji_sehao_2"
                  android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/app_name"
             />
            </LinearLayout>
                <LinearLayout 
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
         >
         <ImageView 
               android:id="@+id/iv_xunfanji_sehao_3"
             android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
             />
         <TextView 
               android:id="@+id/txt_xunfanji_sehao_3"
                  android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/app_name"
             />
            </LinearLayout>
     </LinearLayout>

</LinearLayout> 
       <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    android:background="@drawable/xunfanji2_bg5"
    android:gravity="center_vertical"
    >
    <TextView 
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/str_tangfajianyi"
    			android:layout_marginLeft="20dp"
        />
    <TextView 
      android:id="@+id/txt_xunfanji_tangfajianyi"
          android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/hello_world"
        />
</LinearLayout> 
    </LinearLayout>
</ScrollView>